# rpmc

./: CMakeLists.txt  main.c
idl/: messenger_api.c
src/: chat.c  chat.h  contacts.c  contacts.h  credentials.c  credentials.h  dialog.c  dialog.h  rpmc_string.c  rpmc_string.h  session.c  session.h  terminal.h
src/api/: log_in.c  log_in.h  log_out.c  log_out.h  messages.c  messages.h  register.c  register.h  users.c  users.h
